When the line numbers are shown, reduced width of inner row to compensate.  Items are no longer cut off on the right side of the row.

--- a/TouchScript/main.css
+++ b/TouchScript/main.css
@@ -79,6 +79,10 @@ body {
   #line-number-item {
     width: calc(3.5em + 80px);
   }
+  
+  .inner-row {
+    width: calc(100% - 3.5em);
+  }
 }
 
 /* Desktop Firefox, mobile Firefox (not Firefox Focus), Samsung Browser (oddly) */
